# bot_tel

./: Makefile  docker-compose.yml  nginx.conf
admin_app/: Dockerfile  manage.py  pyproject.toml
admin_app/admin_app/: asgi.py  settings.py  urls.py  wsgi.py
admin_app/administration/: admin.py  models.py
admin_app/administration/migrations/: 0001_initial.py  0002_searchword_admin.py  0003_alter_admin_id_alter_searchword_admin.py
admin_app/channels/: admin.py  apps.py  models.py
admin_app/channels/migrations/: 0001_initial.py  0002_alter_channel_id.py  0002_alter_channel_url.py  0003_alter_channel_id.py  0003_remove_post_last_parsed_at_remove_post_next_parse_at_and_more.py  0004_alter_channel_options_alter_channel_url.py  0004_alter_post_options_alter_post_channel.py  0005_alter_post_options_alter_post_channel_alter_post_id.py  0006_rename_active_channel_is_active_and_more.py  0007_channel_interval_minutes_channel_priority.py  0008_alter_post_post_id.py  0010_rename_channel_name_channel_name.py  (+9 more)
admin_app/users/: admin.py  apps.py  models.py
admin_app/utils/: admin.py  models.py
parser_app/: Dockerfile  README.md  main.py  pyproject.toml  requerments.txt
parser_app/src/config/: settings.py
parser_app/src/db/: models.py
parser_app/src/repositories/: admin_repository.py  channel_repository.py  excluded_phrases_repository.py  post_repository.py
parser_app/src/schemas/: posts.py
parser_app/src/services/: db.py  lemma.py  notification_service.py  parsers.py  posts_service.py
parser_app/src/utils/: http_requests.py  parsers.py  services.py
(+9 files in other folders)
